  private explicitly to avoid being web publishable.

* i18n: Synced FiveTranslationService implementation with Zope 3.3. This makes
  sure that the TestMessageFallbackDomain is used if registered.

* site/metaconfigure: Local site hook now only applied once per class, so
  multiple <five:localsite> tags for the same class won't cause config
  errors.

Five 1.5.1 (2006-11-04)
=======================

* site: Fixed small bug in FiveSiteManager. (issue #2198)

* browser: processInputs now decodes strings in lists and tuples.

* formlib: Removed redundant subpageform.pt and pageform.pt. Added missing
  error view configuration.

* Made the __call__ method of ViewMixinForAttributes have the same signature
  as the original attribute.  This aids some pathological request parameter
  marshalling.

* Fixed #2168: Missing import

* Port code from Zope 3 making resource directories recursive.
  Thanks to Richard Waid.

Five 1.5 (2006-08-13)
=====================

* Enabled the viewlet related directives by default.

* Added acquisition wrappers to viewlets before updating or rendering.

* Allow multiple uses of the <class>/<content> directive.

* Moved the custom 'provider:' tales expression back into Five.  Made the
  provider directive acquisition wrap the resultant content provider so that
  simple providers that need security declarations (e.g. those that render
  pagetemplates) can work with the Zope 2 security machinery.

* Added Five.browser.pagetemplatefile.ViewPageTemplateFile as an alias
  to ZopeTwoPageTemplateFile and as a Zope 2 correspondence to
  zope.app.pagetemplate.ViewPageTemplateFile.
  
* Added tests to make sure that views are not blocked by acquired attributes.

* Changed the tests to reflect that defaultView no only works for views
  (and not on attributes).

* The FiveSiteManager classes now work again, but are deprecated for the
  new zope.component support. There is also a method to migrate Five.site
  to zope.component.

Five 1.5c (2006-05-29)